removed unused import

--- a/performance_optimizer_agent1.3.ipynb
+++ b/performance_optimizer_agent1.3.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 75,
    "id": "def6985d",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 76,
    "id": "a363d150",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,6 @@
     "import logging, time, asyncio, json\n",
     "import subprocess\n",
     "from typing import Dict, Any\n",
-    "import shutil\n",
     "import re\n",
     "from collections import Counter\n",
     "\n",
@@ -50,13 +49,12 @@
     "from google.adk.models.google_llm import Gemini\n",
     "from google.adk.runners import InMemoryRunner\n",
     "from google.adk.tools import google_search\n",
-    "from google.adk.sessions import InMemorySessionService\n",
     "from google.genai import types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 77,
    "id": "814c11c9",
    "metadata": {},
    "outputs": [
@@ -86,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 78,
    "id": "9189c9f8",
    "metadata": {},
    "outputs": [],
@@ -110,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "id": "fa71d5d9",
    "metadata": {},
    "outputs": [
@@ -279,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 80,
    "id": "3218b693",
    "metadata": {},
    "outputs": [
@@ -416,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 81,
    "id": "f6126377",
    "metadata": {},
    "outputs": [
@@ -482,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 82,
    "id": "044dfdce",
    "metadata": {},
    "outputs": [
@@ -490,14 +488,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-01 11:11:33,147 - INFO - Loaded 19 past scans from disk\n"
+      "2025-12-01 15:06:50,756 - INFO - Loaded 20 past scans from disk\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Persistent memory loaded (19 past scans)\n"
+      "✅ Persistent memory loaded (20 past scans)\n"
      ]
     }
    ],
@@ -605,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 83,
    "id": "5118c402",
    "metadata": {},
    "outputs": [
@@ -722,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 84,
    "id": "e24e76d7",
    "metadata": {},
    "outputs": [],
@@ -895,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 85,
    "id": "527d6761",
    "metadata": {},
    "outputs": [
@@ -903,8 +901,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-01 11:11:33,187 - INFO - Starting scan...\n",
-      "2025-12-01 11:11:33,187 - INFO - Step 1: Monitoring system...\n"
+      "2025-12-01 15:06:50,811 - INFO - Starting scan...\n",
+      "2025-12-01 15:06:50,812 - INFO - Step 1: Monitoring system...\n"
      ]
     },
     {
@@ -923,12 +921,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-01 11:11:33,663 - INFO - Sending out request, model: gemini-2.5-flash-lite, backend: GoogleLLMVariant.GEMINI_API, stream: False\n",
-      "2025-12-01 11:11:34,734 - INFO - Response received from the model.\n",
-      "2025-12-01 11:11:36,618 - INFO - Sending out request, model: gemini-2.5-flash-lite, backend: GoogleLLMVariant.GEMINI_API, stream: False\n",
-      "2025-12-01 11:11:38,102 - INFO - Response received from the model.\n",
-      "2025-12-01 11:11:38,103 - INFO - Step 2: Analyzing issues...\n",
-      "2025-12-01 11:11:38,105 - INFO - Sending out request, model: gemini-2.5-flash-lite, backend: GoogleLLMVariant.GEMINI_API, stream: False\n"
+      "2025-12-01 15:06:51,346 - INFO - Sending out request, model: gemini-2.5-flash-lite, backend: GoogleLLMVariant.GEMINI_API, stream: False\n",
+      "2025-12-01 15:06:52,173 - INFO - Response received from the model.\n",
+      "2025-12-01 15:06:54,130 - INFO - Sending out request, model: gemini-2.5-flash-lite, backend: GoogleLLMVariant.GEMINI_API, stream: False\n",
+      "2025-12-01 15:06:57,014 - INFO - Response received from the model.\n",
+      "2025-12-01 15:06:57,019 - INFO - Step 2: Analyzing issues...\n",
+      "2025-12-01 15:06:57,021 - INFO - Sending out request, model: gemini-2.5-flash-lite, backend: GoogleLLMVariant.GEMINI_API, stream: False\n"
      ]
     },
     {
@@ -936,50 +934,50 @@
      "output_type": "stream",
      "text": [
       "monitor > The system status is as follows:\n",
-      "- CPU usage is at 9.7%, which is well below the threshold of 80%.\n",
-      "- Memory usage is at 79.3%, which is below the threshold of 85%.\n",
-      "- Disk usage is at 58.7%, which is below the threshold of 90%.\n",
+      "- CPU usage is at 16.8%, which is normal.\n",
+      "- Memory usage is at 84.3%, which is close to the threshold of 85%.\n",
+      "- Disk usage is at 58.7%, which is normal.\n",
       "\n",
       "The top 5 processes by CPU usage are:\n",
-      "1. System (PID 4): 16.1% CPU\n",
-      "2. Copilot.exe (PID 26948): 10.1% CPU\n",
-      "3. Code.exe (PID 41636): 7.9% CPU\n",
-      "4. chrome.exe (PID 55200): 7.9% CPU\n",
-      "5. chrome.exe (PID 54168): 7.6% CPU\n",
+      "- System (PID: 4) with 9.5% CPU usage\n",
+      "- Copilot.exe (PID: 26948) with 7.9% CPU usage\n",
+      "- svchost.exe (PID: 4196) with 7.5% CPU usage\n",
+      "- svchost.exe (PID: 8100) with 7.5% CPU usage\n",
+      "- chrome.exe (PID: 55200) with 6.8% CPU usage\n",
       "\n",
       "The top 5 processes by memory usage are:\n",
-      "1. chrome.exe (PID 8852): 4.33% Memory\n",
-      "2. chrome.exe (PID 24396): 3.69% Memory\n",
-      "3. chrome.exe (PID 55572): 3.35% Memory\n",
-      "4. Code.exe (PID 41636): 3.17% Memory\n",
-      "5. Code.exe (PID 57636): 3.17% Memory\n",
+      "- MemCompression (PID: 3596) with 5.45% memory usage\n",
+      "- chrome.exe (PID: 8852) with 4.65% memory usage\n",
+      "- chrome.exe (PID: 24396) with 3.39% memory usage\n",
+      "- Code.exe (PID: 57636) with 3.10% memory usage\n",
+      "- Code.exe (PID: 41636) with 2.98% memory usage\n",
       "\n",
-      "All systems are operating within normal parameters. No issues have been detected.\n",
+      "No critical issues were detected. However, memory usage is high and should be monitored.\n",
       "\n",
       " ### Created new session: debug_session_id\n",
       "\n",
       "User > Analyze this system:\n",
       "\n",
       "The system status is as follows:\n",
-      "- CPU usage is at 9.7%, which is well below the threshold of 80%.\n",
-      "- Memory usage is at 79.3%, which is below the threshold of 85%.\n",
-      "- Disk usage is at 58.7%, which is below the threshold of 90%.\n",
+      "- CPU usage is at 16.8%, which is normal.\n",
+      "- Memory usage is at 84.3%, which is close to the threshold of 85%.\n",
+      "- Disk usage is at 58.7%, which is normal.\n",
       "\n",
       "The top 5 processes by CPU usage are:\n",
-      "1. System (PID 4): 16.1% CPU\n",
-      "2. Copilot.exe (PID 26948): 10.1% CPU\n",
-      "3. Code.exe (PID 41636): 7.9% CPU\n",
-      "4. chrome.exe (PID 55200): 7.9% CPU\n",
-      "5. chrome.exe (PID 54168): 7.6% CPU\n",
+      "- System (PID: 4) with 9.5% CPU usage\n",
+      "- Copilot.exe (PID: 26948) with 7.9% CPU usage\n",
+      "- svchost.exe (PID: 4196) with 7.5% CPU usage\n",
+      "- svchost.exe (PID: 8100) with 7.5% CPU usage\n",
+      "- chrome.exe (PID: 55200) with 6.8% CPU usage\n",
       "\n",
       "The top 5 processes by memory usage are:\n",
-      "1. chrome.exe (PID 8852): 4.33% Memory\n",
-      "2. chrome.exe (PID 24396): 3.69% Memory\n",
-      "3. chrome.exe (PID 55572): 3.35% Memory\n",
-      "4. Code.exe (PID 41636): 3.17% Memory\n",
-      "5. Code.exe (PID 57636): 3.17% Memory\n",
+      "- MemCompression (PID: 3596) with 5.45% memory usage\n",
+      "- chrome.exe (PID: 8852) with 4.65% memory usage\n",
+      "- chrome.exe (PID: 24396) with 3.39% memory usage\n",
+      "- Code.exe (PID: 57636) with 3.10% memory usage\n",
+      "- Code.exe (PID: 41636) with 2.98% memory usage\n",
       "\n",
-      "All systems are operating within normal parameters. No issues have been detected.\n",
+      "No critical issues were detected. However, memory usage is high and should be monitored.\n",
       "\n",
       "Identify:\n",
       "1. Critical issues (anything above threshold)\n",
@@ -992,28 +990,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-01 11:11:38,884 - INFO - Response received from the model.\n",
-      "2025-12-01 11:11:38,887 - INFO - Scan recorded. Total history: 20 scans\n",
-      "2025-12-01 11:11:38,888 - INFO - Scan complete!\n"
+      "2025-12-01 15:06:59,386 - INFO - Response received from the model.\n",
+      "2025-12-01 15:06:59,397 - INFO - Scan recorded. Total history: 21 scans\n",
+      "2025-12-01 15:06:59,399 - INFO - Scan complete!\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "analyzer > No issues have been detected. All systems are operating within normal parameters.\n",
+      "analyzer > - **Critical Issues:** None.\n",
+      "- **Root Causes:** High memory usage is the primary concern, approaching the 85% threshold.\n",
+      "- **Severity Levels:** Memory usage is assessed as **Medium** due to its proximity to the threshold.\n",
+      "- **Processes Responsible:**\n",
+      "    - **Memory:** MemCompression (PID: 3596) at 5.45%, chrome.exe (PID: 8852) at 4.65%, chrome.exe (PID: 24396) at 3.39%, Code.exe (PID: 57636) at 3.10%, and Code.exe (PID: 41636) at 2.98%.\n",
+      "    - **CPU:** System (PID: 4) at 9.5%, Copilot.exe (PID: 26948) at 7.9%, svchost.exe (PID: 4196) at 7.5%, svchost.exe (PID: 8100) at 7.5%, and chrome.exe (PID: 55200) at 6.8%.\n",
+      "\n",
+      "**Overall Assessment:** While no critical issues are present, the high memory usage warrants attention. The `MemCompression` process and multiple `chrome.exe` and `Code.exe` instances are the main contributors to memory consumption. CPU usage is within normal limits, with `System`, `Copilot.exe`, and `svchost.exe` being the top consumers.\n",
       "╔==============================================================================╗\n",
       "║                    OPTIMAIZER HEALTH REPORT                                 ║\n",
       "╚==============================================================================╝\n",
       "\n",
       "🏥 OVERALL HEALTH STATUS\n",
       "--------------------------------------------------------------------------------\n",
-      "✅ HEALTHY - Your system is running well!\n",
+      "⚠️ NEEDS ATTENTION - Monitor system performance\n",
       "\n",
       "📊 QUICK STATS\n",
       "--------------------------------------------------------------------------------\n",
-      "💾 Memory: 79.3%\n",
-      "⚡ CPU: 9.7%\n",
+      "💾 Memory: 84.3%\n",
+      "⚡ CPU: 16.8%\n",
       "🎮 GPU: Unavailable\n",
       "🔋 Battery: Unavailable\n",
       "\n",
@@ -1033,7 +1038,14 @@
       "================================================================================\n",
       "\n",
       "🔍 RAW ANALYSIS:\n",
-      "No issues have been detected. All systems are operating within normal parameters.\n"
+      "- **Critical Issues:** None.\n",
+      "- **Root Causes:** High memory usage is the primary concern, approaching the 85% threshold.\n",
+      "- **Severity Levels:** Memory usage is assessed as **Medium** due to its proximity to the threshold.\n",
+      "- **Processes Responsible:**\n",
+      "    - **Memory:** MemCompression (PID: 3596) at 5.45%, chrome.exe (PID: 8852) at 4.65%, chrome.exe (PID: 24396) at 3.39%, Code.exe (PID: 57636) at 3.10%, and Code.exe (PID: 41636) at 2.98%.\n",
+      "    - **CPU:** System (PID: 4) at 9.5%, Copilot.exe (PID: 26948) at 7.9%, svchost.exe (PID: 4196) at 7.5%, svchost.exe (PID: 8100) at 7.5%, and chrome.exe (PID: 55200) at 6.8%.\n",
+      "\n",
+      "**Overall Assessment:** While no critical issues are present, the high memory usage warrants attention. The `MemCompression` process and multiple `chrome.exe` and `Code.exe` instances are the main contributors to memory consumption. CPU usage is within normal limits, with `System`, `Copilot.exe`, and `svchost.exe` being the top consumers.\n"
      ]
     }
    ],
@@ -1057,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 86,
    "id": "ee35fc98",
    "metadata": {},
    "outputs": [
@@ -1065,13 +1077,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average memory: 85.6%\n",
+      "Average memory: 85.5%\n",
       "Peak memory: 90.4%\n",
-      "Issue on 2025-12-01T10:39:00.644544: 84.8% memory\n",
       "Issue on 2025-12-01T10:42:12.302992: 86.6% memory\n",
       "Issue on 2025-12-01T10:58:14.768621: 85.1% memory\n",
       "Issue on 2025-12-01T11:03:43.785619: 81.0% memory\n",
-      "[('code', 19), ('chrome', 19), ('copilot', 14), ('dwm', 6), ('svchost', 4)]\n"
+      "Issue on 2025-12-01T15:06:59.394076: 84.3% memory\n",
+      "[('code', 20), ('chrome', 20), ('copilot', 15), ('dwm', 6), ('svchost', 5)]\n"
      ]
     }
    ],
@@ -1108,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 87,
    "id": "0054cab4",
    "metadata": {},
    "outputs": [],
@@ -1137,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 88,
    "id": "d9f636f6",
    "metadata": {},
    "outputs": [],
@@ -1192,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 89,
    "id": "56659640",
    "metadata": {},
    "outputs": [],
@@ -1308,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 90,
    "id": "eeac3211",
    "metadata": {},
    "outputs": [],
@@ -1402,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 91,
    "id": "bd4596f8",
    "metadata": {},
    "outputs": [],
